WIP Template pages

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+GOOGLE_CLIENT_ID="739825604246-rg7qhf2mn0gouvjdpkascp47igce96tg.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET = pO1CGpGfbLwQiirRkYurMqOJSpTuGvymV0FQEJlfCgE=
