--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "db:push": "npx prisma db push",
+    "db:pull": "npx prisma db pull",
+    "db:update": "npx prisma db pull && npx prisma generate",
+    "db:studio": "npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
