--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.4",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
