--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "npx prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -36,7 +37,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "prisma": "^5.10.2",
     "react": "^18",
