--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.2.1",
     "prisma": "^5.10.2",
     "react": "^18",
+    "react-content-loader": "^7.0.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
