--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.12.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -31,16 +31,17 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.13.2",
     "@uploadthing/react": "^5.7.0",
+    "@vercel/blob": "^0.22.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "prisma": "^5.10.2",
     "react": "^18",
     "react-content-loader": "^7.0.0",
     "react-day-picker": "^8.10.0",
@@ -65,6 +66,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
