--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-content-loader": "^7.0.0",
     "react-day-picker": "^8.10.0",
@@ -61,6 +62,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
