--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "db:push": "npx prisma db push",
     "db:pull": "npx prisma db pull",
     "db:update": "npx prisma db pull && npx prisma generate",
@@ -34,6 +35,7 @@
     "@tanstack/react-table": "^8.13.2",
     "@uploadthing/react": "^5.7.0",
     "@vercel/blob": "^0.22.3",
+    "@vercel/speed-insights": "^1.0.11",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
