--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # production
 /build
+/db-backups
 
 # misc
 .DS_Store
@@ -38,5 +39,6 @@ next-env.d.ts
 
 # environment
 .env
+
 # Sentry Config File
 .env.sentry-build-plugin
