--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@fontsource/yanone-kaffeesatz": "^5.1.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "^14.2.3",
     "@prisma/client": "^5.22.0",
