--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^3.3.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
+    "motion": "^11.11.17",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
