--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^3.7.15",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-content-loader": "^7.0.0",
