--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@sentry/nextjs": "^8.41.0",
     "@tanstack/react-table": "^8.13.2",
     "@uploadthing/react": "^5.7.0",
@@ -43,7 +44,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.468.0",
     "motion": "^11.11.17",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
